# cabalhelper-rust

./: .gitignore  CONTRIBUTING.md  Cargo.toml  PROJECT_STATUS.md  README.md  RUSTAUTOGUI_DOCUMENTATION  RUST_MIGRATION_PLAN.md  build.rs
docs/: cargo_terminal_fix.md  flexible_window_detection.md  performance_and_dock_analysis.md  scaling_investigation.md  ui_improvements.md
src/: app.rs  clicker.rs  main.rs  settings.rs  window.rs
src/automation/: context.rs  detection.rs  interaction.rs  mod.rs
src/calibration/: mod.rs
src/core/: coords.rs  hotkey.rs  input.rs  mod.rs  ocr_parser.rs  screen_capture.rs  screen_draw.rs  window.rs  worker.rs
src/tools/: collection_filler.rs  custom_macro.rs  email_clicker.rs  heil_clicker.rs  image_clicker.rs  mod.rs  ocr_macro.rs  trait.rs
src/ui/: app_header.rs  collection_filler.rs  custom_macro.rs  email_clicker.rs  heil_clicker.rs  help.rs  image_clicker.rs  log_panel.rs  mod.rs  ocr_macro.rs  status.rs
