[package]
name = "cabalhelper-rust"
version = "0.1.0"
edition = "2021"

[dependencies]
# Windows API bindings
windows = { version = "0.52", features = [
    "Win32_Foundation",
    "Win32_UI_WindowsAndMessaging",
    "Win32_UI_Input",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_Graphics_Gdi",
    "Win32_System_Threading",
] }
# UI framework
eframe = "0.27"
egui = "0.27"




