[package]
name = "cabalhelper-rust"
version = "0.1.0"
edition = "2021"
description = "High-performance Cabal Online automation tools rewritten in Rust."
authors = ["Your Name <you@example.com>"]
license = "MIT"
repository = "https://github.com/your-username/cabalhelper-rust"

[dependencies]
# Windows API bindings
windows = { version = "0.52", features = [
    "Win32_Foundation",
    "Win32_UI_WindowsAndMessaging",
    "Win32_UI_Input",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_Graphics_Gdi",
    "Win32_System_Threading",
    "Win32_UI_HiDpi",
] }
# UI framework
eframe = "0.27"
egui = "0.27"
rfd = "0.14"
rustautogui = "2.5.0"
# Settings serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[build-dependencies]
winres = "0.1"

[profile.release]
# Performance-First Optimization Profile
# opt-level = 3        # Max speed optimization (Standard Release)
# lto = "thin"          # Link Time Optimization: Better inlining = FASTER + SMALLER
# codegen-units = 1    # Maximize optimization context = FASTER + SMALLER
# panic = "abort"      # Remove crash unwinding code = SMALLER + NEUTRAL SPEED
# strip = true         # Remove debug symbols = SMALLER + NEUTRAL SPEED


